# TomatoTimer_Diary

./: CMakeLists.txt  README.md
qt/: LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  main.cpp
qt/pages/: DiaryPage.cpp  DiaryPage.h  DiaryTabPage.cpp  DiaryTabPage.h  ImageToolsPage.cpp  ImageToolsPage.h  LoginRegisterPage.cpp  LoginRegisterPage.h  PomodoroPage.cpp  PomodoroPage.h  SettingsSyncPage.cpp  SettingsSyncPage.h  StatsPage.cpp  StatsPage.h  StopwatchPage.cpp  StopwatchPage.h
qt/services/: DataStore.h  DiaryStore.cpp  DiaryStore.h  OcrService.cpp  OcrService.h  PaddleInferOcr.cpp  PaddleInferOcr.h  Session.h  SpeechToText.cpp  SpeechToText.h  StatsService.cpp  StatsService.h
qt/ui/: ImageView.cpp  ImageView.h  Theme.cpp  Theme.h
qt/ui/charts/: BarChartWidget.cpp  BarChartWidget.h  PieChartWidget.cpp  PieChartWidget.h
qt/windows/: CalendarWindow.cpp  CalendarWindow.h  DiaryWindow.cpp  DiaryWindow.h
